# xtask-patch

./: Cargo.toml
.github/workflows/: example.yml  rust.yml
examples/demo/baz/: Cargo.toml
examples/demo/chrono/: Cargo.toml
examples/demo/itertools/: Cargo.toml
examples/demo/itertools/src/: lib.rs
examples/demo/my-project/: Cargo.toml
examples/demo/my-project/xtask/: Cargo.toml
examples/demo/my-project/xtask/src/: main.rs
src/: lib.rs  manifest.rs  patches.rs
