[package]
name = "my-project"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "xtask"
]

[dependencies]
chrono = { git = "https://github.com/chronotope/chrono" }
itertools = "0.14.0"

[patch."https://github.com/chronotope/chrono.git"]
#chrono = { path = "../chrono" }

[patch.crates-io]
#itertools = { path = "../itertools" }